crates/compiler/tests/parse_errors/def_equals.txt
-- UNFINISHED DEFINITION ------------------------------------------ src/Main.elm

I got stuck while parsing the `x` definition:

3| x 1
      ^
I was expecting to see an argument or an equals sign next.

Here is a valid definition (with a type annotation) for reference:

    greet : String -> String
    greet name =
      "Hello " ++ name ++ "!"

The top line (called a "type annotation") is optional. You can leave it off if
you want. As you get more comfortable with Elm and as your project grows, it
becomes more and more valuable to add them though! They work great as
compiler-verified documentation, and they often improve error messages!

